[package]
name = "p2p-rust-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
tiny_http = "0.12.0"
tokio = "1.38.0"
tokio-rustls = "0.26.0"
